@@ -6,6 +6,8 @@
 220 the.local.host.name ESMTP Exim x.yz Tue, 2 Mar 1999 09:44:33 +0000
 252 Administrative prohibition
 599 custom reject
+501 unqual: recipient address must contain a domain
+501 empty address
 550 Administrative prohibition
 221 the.local.host.name closing connection
 
